--- a/STAT184 Hwk Template.Rmd
+++ b/STAT184 Hwk Template.Rmd
@@ -1,14 +1,14 @@
 ---
 title: "STAT 184 Homework Exercises" 
-subtitle: "DataComputing Chapters 1 & 2"
-author: "Your Name"
+subtitle: "DataComputing Chapters 17"
+author: "eric weah"
 output: html_notebook
 ---
 
 ## Assigned Exercises
 
-- DC Chapter 1 Exercises: 1.1, 1.2, 1.3, 1.4, 1.5  
-- DC Chapter 2 Exercises: 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.8, 2.9
+- DC Chapter 17 Exercises: 17.1
+
 
 ## Front Matter
 
@@ -19,6 +19,10 @@ rm(list = ls())
 # all packages used for the assignment
 library(mosaic)
 library(tidyverse)
+library(DataComputing)
+library(tidyverse)
+library(tidyr)
+library(lubridate)
 
 ```
 
@@ -26,17 +30,25 @@ library(tidyverse)
 
 ## Chapter 1 Exercises
 
-### Problem 1.1
+### Problem 17.1
+b.)
+```{r}
+BabyNames%>%
+  group_by(sex,name)%>%
+  filter(grepl("\\s", name))%>%
+  summarise(total=sum(count))%>%
+  arrange(desc(total))%>%
+  head(10)
+
+```
+c.)
+```{r}
+BabyNames%>%
+  filter(grepl(
+
+```
 
 
 ### Problem 1.2
 
-[and so forth...]
-
-
-## Chapter 2 Exercises
-
-### Problem 2.1
-
-[and so forth...]
 
